manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: custom-serverless
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: backend-ecr-secret
      containers:
        - name: backend
          image: 444773651763.dkr.ecr.eu-central-1.amazonaws.com/custom-serverless-backend:latest
          imagePullPolicy: Always
