manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-serverless-main-domain-ingress
  namespace: custom-serverless
spec:
  ingressClassName: nginx
  rules:
    - host: custom-serverless.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-serverless-main-domain-www-ingress
  namespace: custom-serverless
spec:
  ingressClassName: nginx
  rules:
    - host: www.custom-serverless.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
